update whisper and hubert alpaca training code

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,12 @@ cython_debug/
 kenlm
 sweep_commonvoice.yaml
 runner.sh
+
+wandb/
+*.data/
+*-default/
+checkpoint-*/
+hubert-*/
+*.yaml
+*.csv
+*.txt
